JCR-1150: do NOT use "Integer.valueOf" instead of "new Integer", it's not available in JDK 1.4
git-svn-id: https://svn.apache.org/repos/asf/jackrabbit/trunk@580347 13f79535-47bb-0310-9956-ffa450edef68